--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
   <div class="w-400 container height-500px">
   <div class="row"style="margin-top: 100px;margin-left: 10px;">
     <div class=" col-lg-4 col-md-4 col-sm-4">
-      <div class="card" style="width: 25rem;height: 2px;">
+      <div class="card" style="width: 25rem;">
         <img src="./image/card.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title"style="color: rgb(89, 22, 152);">Card Python Django - Angular- Full Stack Web Development Expert</h5>
@@ -228,7 +228,7 @@
       </div>
     </div>
     <div class="col-lg-4 col-md-4 col-sm-4">
-      <div class="card" style="width: 25rem;height: 2px;">
+      <div class="card" style="width: 25rem;">
         <img src="./image/card 3.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title"style="color: rgb(89, 22, 152);">MEARN Stack Web Development Expert - Angular & React</h5>
